dhall/tests/type-inference/failure/unit/NaturalSubtractNotNatural.txt
Type error: error: wrong type of function argument
 --> <current file>:1:1
  |
1 | Natural/subtract True True
  | ^^^^^^^^^^^^^^^^ this expects an argument of type: Natural
  |                  ^^^^ but this has type: Bool
  |
  = note: expected type `Natural`
             found type `Bool`
